--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,6 +58,30 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  // plays audio and adds playing class on keydown
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+
+    if(!audio) return; // Stop the function from running all together.
+    audio.currentTime = 0; // Rewind to start.
+    audio.play();
+    key.classList.add('playing');
+  }
+  // Removes playing class on keyup
+  // window.addEventListener('keyup', (e) => {
+  //   const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+  //   key.classList.remove('playing');
+  // })
+
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+  window.addEventListener('keydown', playSound);
 
 </script>
 
